# GPSless-SLAM-drone

./: .gitignore  .gitmodules
orb_slam3_custom/: README.md
orb_slam3_custom/files/: conver_clean.py  convert_airsim_to_euroc.py  convert_fixed.py  live_slam.py  plot_trajectory.py  run_localization.sh  run_mapping.sh  run_mapping_fixed.sh  run_slam.sh  run_slam_map.sh  test_nav_from_slam.py  udp_plot_live.py  udp_pose_listener.py
orb_slam3_custom/files/bridge/: CMakeLists.txt  airsim_stereo_bridge.cc
orb_slam3_custom/files/live_configs/: Stereo-Airsim-LIVE.yaml
orb_slam3_custom/files/scripts/: live_stereo_client.py
orb_slam3_custom/files/src/: LiveStereoBridge.cc
orb_slam3_custom/patches/: orb_slam3_local_changes.patch
slam_web/: calibration.json  main.py  requirements_base.txt
slam_web/app/: airsim_pose.py  debug_airsim.py  drone_control.py  drone_motion.py  drone_process.py  gps_utils.py  kf_reader.py  main.py  mission_database.py  mission_pair_recorder.py  mission_planner.py  mission_routes.py  shared_paths.py  slam_airsim_alignment.py  slam_control.py  slam_process.py  slam_routes.py  slam_session.py  static_geo_init.py  udp_listener.py
slam_web/data/: .gitkeep
slam_web/frontend/: drone_flying.json  drone_photography.json  drone_presentation.json  green_drone.json  index.html  opening_drone_hovering.json  styles.css
slam_web/missions/: airsim_pose.json  calib_motion_status.json  slam_airsim_pairs.json  slam_to_airsim_transform.json
static/map/: config.json
tools/: diag_pairs.py
(+5 files in other folders)
